<resources>
    <string name="app_name">Location Tracker</string>


    <string name="latitude_">Latitude:</string>
    <string name="longitute_">Longitute:</string>


    <string name="current_location">Current location</string>
    <string name="previews_locations">Previews locations</string>

    <string name="location_unknown">Unknown</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="start_location_updates">Started location updates!</string>
    <string name="stop_location_updates">Location updates stopped!</string>

    <string name="permission_rationale">Location permission is needed for core functionality. You can grant them in app settings.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>

    <string name="location_settings_inadequate">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="pending_intent_unable">PendingIntent unable to execute request.</string>
    <string name="battery_">Battery:</string>
</resources>
